adição do start ao script

--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "Persistência de Dados, Versionamento de Código e Implantação",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "node  my-bank-api.js"
   },
   "repository": {
     "type": "git",
